--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.6.0",
     "react-date-picker": "^9.1.0",
     "react-dom": "^18.2.0",
+    "react-promise": "^3.0.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.1.5",
