--- a/app/package.json
+++ b/app/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.16",
     "@testing-library/jest-dom": "^5.16.5",
@@ -16,6 +18,7 @@
     "react-date-picker": "^9.1.0",
     "react-dom": "^18.2.0",
     "react-promise": "^3.0.2",
+    "react-radio-buttons": "^1.2.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.1.5",
