--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.1",
     "i": "^0.3.7",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-date-picker": "^9.1.0",
